--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div>
-        <img src="img/taro.png" alt="太郎のアイコン" width="120" height="120" class="icon">
+        <img src="https://github.com/tatsuya-onuki/test/blob/main/taro.png" alt="太郎のアイコン" width="120" height="120" class="icon">
       </div>
       <div>
         <h1>山田太郎</h1>
