--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>山田太郎のポートフォリオサイト</title>
-  <link rel="icon" href="img/favicon.png">
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div>
-        <img src="./https://github.com/tatsuya-onuki/test/blob/main/taro.png" alt="太郎のアイコン" width="120" height="120" class="icon">
+        <img src="taro.png" alt="太郎のアイコン" width="120" height="120" class="icon">
       </div>
       <div>
         <h1>山田太郎</h1>
@@ -22,12 +22,12 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./img/blog.png" alt="ブログアイコン" width="20" height="20">
+              <img src="blog.png" alt="ブログアイコン" width="20" height="20">
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="img/photos.png" alt="写真アイコン" width="20" height="20">
+              <img src="photos.png" alt="写真アイコン" width="20" height="20">
             </a>
           </li>
         </ul>
@@ -39,17 +39,17 @@
     <div class="container">
       <h1>WORKS</h1>
       <section class="animate slide-from-left">
-        <img src="img/work1.png" alt="勇者ゲーム" width="400" height="225">
+        <img src="work1.png" alt="勇者ゲーム" width="400" height="225">
         <h2>勇者ゲーム</h2>
         <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
       </section>
       <section class="animate slide-from-right">
-        <img src="img/work2.png" alt="宝探しゲーム" width="400" height="225">
+        <img src="work2.png" alt="宝探しゲーム" width="400" height="225">
         <h2>宝探しゲーム</h2>
         <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
       </section>
       <section class="animate slide-from-left">
-        <img src="img/work3.png" alt="神経衰弱ゲーム" width="400" height="225">
+        <img src="work3.png" alt="神経衰弱ゲーム" width="400" height="225">
         <h2>神経衰弱ゲーム</h2>
         <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
       </section>
